# tsrun

./: .gitignore  CLAUDE.md  Cargo.toml  README.md  arena_plan.md  cheap_clone_plan.md  clippy.toml  design.md  environment_gc_plan.md  examples_plan.md  gc_integration_plan.md  guarded_gc.md  profiling.md  shared_strings_dictionary_plan.md  size_reduction_plan.md  stack_only_execution.md  state_machine.md  test262.md  zero_panic_plan.md
.github/workflows/: ci.yml  fuzz.yml
benches/: clone_benchmarks.rs  lexer.rs  parser.rs
docs/: async_trampoline.md  bytecode_migration_plan.md  class_fix_plan.md  cleanup_plan.md  guards_fix.md  missing_bytecodevm_features.md  missing_features_plan.md  optimization-proposal.md  order_system_refactor_plan.md  proper_use_of_guards.md  trampoline_migration_plan.md
examples/: domain-model-single.ts  hello.ts  loop_closures.ts  loop_no_closures.ts  test262-runner.rs
examples/algorithms/: fibonacci.ts  main.ts  primes.ts  sorting.ts  statistics.ts
examples/async-demo/: fetcher.ts  main.ts  processor.ts
examples/c-embedding/: Makefile  README.md  async_orders.c  basic.c  event_system.c  internal_modules.c  module_loading.c  native_functions.c  regexp  regexp.c  regexp_provider.c  regexp_provider.h  tsrun.h  tsrun_console.c  tsrun_console.h
examples/collections/: counter.ts  graph.ts  main.ts
examples/config-generator/: defaults.ts  main.ts  types.ts
examples/data-pipeline/: data.ts  main.ts  transforms.ts
examples/datetime/: calendar.ts  duration.ts  main.ts
examples/domain-model/: entity.ts  main.ts  order.ts  user.ts
examples/error-handling/: main.ts  safe-ops.ts  validators.ts
examples/generators/: fibonacci.ts  main.ts  range.ts  tree.ts
examples/go-wazero/: build.sh  go.mod
examples/go-wazero/async/: main.go
examples/go-wazero/basic/: main.go
examples/go-wazero/modules/: main.go
examples/go-wazero/native/: main.go
examples/go-wazero/tsrun/: context.go  memory.go  runtime.go  types.go  value.go
examples/imports-test/: constants.ts  main.ts  math.ts
examples/json-processing/: main.ts  schema.ts  transform.ts
examples/memory-management/: circular-refs.ts  closure-lifetime.ts  comparison.ts  gc-cycles.ts  gc-debug-simple.ts  gc-debug.ts  gc-no-cycles.ts  gc-profile-test.ts  gc-scale-test.ts  gc-stress.ts  gc-verify-no-cycles.ts  gc-verify.ts  heavy-stress.ts  main.ts  object-churn.ts  scope-cleanup.ts  simple-cycles.ts  stress-test.ts  test_env.ts
examples/profiling/: bench-call0.ts  bench-call4.ts  bench-call8.ts  bench-fib25.ts  bench-method4.ts  compute-intensive.ts  fibonacci.ts  function-call-overhead.ts
examples/text-processing/: formatter.ts  main.ts  parser.ts  validator.ts
examples/typescript-features/: enums.ts  main.ts  namespaces.ts
examples/wasm-playground/: build.sh  index.html  main.js  package-lock.json  package.json  style.css
examples/wasm-playground/pkg/: .gitignore  tsrun.js
examples/wasm-playground/tests/: browser-test.js  package.json  test.js
fuzz/: Cargo.toml
fuzz/fuzz_targets/: fuzz_interpreter.rs  fuzz_lexer.rs  fuzz_parser.rs
fuzz/scripts/: extract_corpus.py  fuzz.sh
site/: _headers  index.html  package-lock.json
site/css/: style.css
site/docs/: api.html  architecture.html  index.html
site/examples/: index.html
site/getting-started/: index.html
site/js/: main.js
site/playground/: index.html  main.js  style.css
src/: api.rs  ast.rs  error.rs  gc.rs  interpreter.rs  lexer.rs  lib.rs  old_gc.rs  parser.rs  prelude.rs  string_dict.rs  value.rs
src/compiler/: builder.rs  bytecode.rs  compile_expr.rs  compile_pattern.rs  compile_stmt.rs  hoist.rs  mod.rs
src/ffi/: console.rs  context.rs  mod.rs  module.rs  native.rs  order.rs  regexp.rs  value.rs
src/interpreter/: bytecode_vm.rs  eval_stack.rs  mod.rs  old_mod.rs  stack.rs
src/interpreter/builtins/: array.rs  boolean.rs  console.rs  date.rs  error.rs  function.rs  generator.rs  global.rs  internal.rs  json.rs  map.rs  math.rs  mod.rs  number.rs  object.rs  promise.rs  promise_new.rs  proxy.rs  regexp.rs  set.rs  string.rs  symbol.rs
src/platform/: mod.rs  std_impl.rs  wasm_impl.rs
src/wasm/: mod.rs
src/wasm_raw/: mod.rs
tests/: compiler.rs  lexer.rs  parser.rs  wasm_handles.rs
tests/interpreter/: api.rs  array.rs  async_await.rs  async_iter.rs  basics.rs  boolean.rs  bytecode.rs  class.rs  console.rs  control_flow.rs  cycle_leak.rs  data_pipeline_debug.rs  date.rs  decorator.rs  dynamic_import.rs  enum_test.rs  error.rs  eval.rs  exports.rs  function.rs  gc.rs  generator.rs  global.rs  json.rs  main.rs  map.rs  math.rs  modules.rs  namespace.rs  number.rs  object.rs  orders.rs  promise.rs  proxy.rs  regexp.rs  set.rs  stack.rs  state_machine.rs  step.rs  strict.rs  (+4 more)
