[package]
name = "tsrun"
version = "0.1.6"
edition = "2024"
description = "A TypeScript interpreter designed for embedding in applications"
license = "MIT"
keywords = ["typescript", "javascript", "interpreter", "embedding"]
categories = ["parser-implementations"]

[[bin]]
name = "tsrun"
path = "src/bin/tsrun.rs"

[[bin]]
name = "profile_lexer"
path = "src/bin/profile_lexer.rs"

[[bin]]
name = "profile_parser"
path = "src/bin/profile_parser.rs"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
indexmap = { version = "2.0", features = ["serde"] }
regex = { version = "1.10", default-features = false, features = ["std", "unicode-perl", "unicode-case"] }
fancy-regex = "0.17"
rustc-hash = "2.1"

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "lexer"
harness = false

[[bench]]
name = "parser"
harness = false

[lints.clippy]
unwrap_used = "deny"
expect_used = "deny"
indexing_slicing = "deny"
panic = "deny"
unreachable = "deny"
todo = "deny"
unimplemented = "deny"
string_slice = "deny"

[profile.release]
lto = true
codegen-units = 1
opt-level = "z"
strip = true
panic = "abort"

[profile.profiling]
inherits = "release"
debug = true
strip = false
