[package]
name = "tsrun"
version = "0.1.7"
edition = "2024"
description = "A TypeScript interpreter designed for embedding in applications"
license = "MIT"
keywords = ["typescript", "javascript", "interpreter", "embedding"]
categories = ["parser-implementations"]

[[bin]]
name = "tsrun"
path = "src/bin/tsrun.rs"
required-features = ["std"]

[[bin]]
name = "profile_lexer"
path = "src/bin/profile_lexer.rs"
required-features = ["std"]

[[bin]]
name = "profile_parser"
path = "src/bin/profile_parser.rs"
required-features = ["std"]

[[bin]]
name = "test262-runner"
path = "src/bin/test262-runner.rs"
required-features = ["std"]

[features]
default = ["std"]

# Full std support (current behavior)
std = ["regex", "console", "serde/std", "serde_json/std", "rustc-hash/std"]

# Regex support (requires std due to fancy-regex)
regex = ["dep:fancy-regex"]

# Console builtin (requires std for println!)
console = []

[dependencies]
serde = { version = "1.0", default-features = false, features = ["derive", "alloc"] }
serde_json = { version = "1.0", default-features = false, features = ["alloc"] }
indexmap = { version = "2.0", default-features = false, features = ["serde"] }
fancy-regex = { version = "0.17", optional = true }
rustc-hash = { version = "2.1", default-features = false }
hashbrown = { version = "0.15", default-features = false, features = ["default-hasher"] }
libm = "0.2"

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "lexer"
harness = false

[[bench]]
name = "parser"
harness = false

[lints.clippy]
unwrap_used = "deny"
expect_used = "deny"
indexing_slicing = "deny"
panic = "deny"
unreachable = "deny"
todo = "deny"
unimplemented = "deny"
string_slice = "deny"

[profile.release]
lto = true
codegen-units = 1
opt-level = "z"
strip = true
panic = "abort"

[profile.profiling]
inherits = "release"
debug = true
strip = false
